--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "full-stack-web-app",
-  "private": true,
+  "homepage": "https://JoeSigma4.github.io/education-website-project",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scroll": "^1.9.3"
